
* explicitly handling the disabling of assertions (with parameter
  `--disable-assert') similar to Fiona's configure script

* canonized names of constants generated for file `src/config.h' and adjusted
  the output of the `--bug' parameter

* removed unnecessary files `src/getopt.c', `src/getopt1.c', and
  `src/getopt.h'

* used option `gnits' for Automake, see
  `http://www.gnu.org/software/autoconf/manual/automake.html#Gnits'

* moved acknowledgements from file `AUTHOR' to file `THANKS' to meet the
  strict Gnits requirements

* updated documentation

Version 1.10
============

* Rachel does not need to be installed to execute `make experiments'

* added configure script parameter `--enable-universal' to set flags to build
  a Mac universal binary (`http://www.apple.com/universal')

* added configure script parameter `--enable-win32' to set flags to build a
  Windows binary which uses the MinGW framework (`http://www.mingw.org') to
  be independent of the `cygwin1.dll' provided by Cygwin
  (`http://www.cygwin.com')

* added configure script parameter `--enable-use64bit' to set flags to build
  a 64 bit binary (e.g. for x86_64, ppc64, or 64-Bit SPARC)

* chosen configure script parameters are printed when using `--bug' command
  line parameter

* made the configure script option `--disable-aspects' standard

* added a command line parameter `--noop' to exit after parsing the input
  files - mostly for debug information, e.g. if you want to count the
  services characterized by an OG (combined with `--verbose')

* fixed a bug: the requirements to calculate matching-based edit distance
  (final states are sink states) led to incorrect formula evaluation (see
  `https://gna.org/bugs/?11944') when calculating the number of characterized
  services

* removed orphaned code for linear programming

* added more test cases (also expected failures)

* added code coverage checks using LTP LCOV
  (`http://ltp.sourceforge.net/coverage/lcov.php'); checks can be invoked in