@@ -37,6 +37,11 @@ AC_TYPE_SIZE_T
 AC_CANONICAL_BUILD
 AC_DEFINE_UNQUOTED([BUILDSYSTEM], ["$build"], [The platform.])
 
+# flags set by the configure script
+configured_CFLAGS=""
+configured_CXXFLAGS=""
+configured_LDFLAGS=""
+
 
 #############################################################################
 # In the following, command line paraemters for the configure script are
@@ -66,17 +71,33 @@ AC_MSG_RESULT($enable_aspects)
 AM_CONDITIONAL(ENABLE_ASPECTS, test "$enable_aspects" = "yes")
 AC_DEFINE_UNQUOTED(CONFIG_ENABLEASPECTS, "$enable_aspects", [whether to use aspects])
 
+# parameter "--enable-64bit"
+AC_ARG_ENABLE(64bit,
+  AS_HELP_STRING([--enable-64bit],[build for a 64 bit architecture such as x86_64 or ppc64 (disabled by default)]),
+  enable_64bit=${enableval}, enable_64bit="no")
+AC_MSG_CHECKING([whether to build for a 64 bit architecture])
+AC_MSG_RESULT($enable_64bit)
+AC_DEFINE_UNQUOTED(CONFIG_ENABLE64BIT, "$enable_64bit", [whether to build a 64 Bit binary])
+
+if test "$enable_64bit" = "yes"; then
+  configured_CFLAGS=$configured_CFLAGS" -m64"
+  configured_CXXFLAGS=$configured_CXXFLAGS" -m64"
+  configured_LDFLAGS=$configured_LDFLAGS" -m64"
+fi
+
 # parameter "--enable-universal"
 AC_ARG_ENABLE(universal,
   AS_HELP_STRING([--enable-universal],[build a Mac Universal binary which is executable on Intel and Power PC platforms (disabled by default)]),
   enable_universal=${enableval}, enable_universal="no")
 AC_MSG_CHECKING([whether to build Mac universal binary])
 AC_MSG_RESULT($enable_universal)
-AM_CONDITIONAL(ENABLE_UNIVERSAL, test "$enable_universal" = "yes")
 AC_DEFINE_UNQUOTED(CONFIG_ENABLEUNIVERSAL, "$enable_universal", [whether to build a Mac universal binary])
 
 if test "$enable_universal" = "yes"; then
   AM_INIT_AUTOMAKE(no-dependencies)
+  configured_CFLAGS=$configured_CFLAGS" -isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch ppc -arch i386"
+  configured_CXXFLAGS=$configured_CXXFLAGS" -isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch ppc -arch i386"
+  configured_LDFLAGS=$configured_LDFLAGS" -isysroot /Developer/SDKs/MacOSX10.4u.sdk -arch ppc -arch i386 -mmacosx-version-min=10.4"
 fi
 
 # parameter "--enable-win32"
@@ -85,17 +106,18 @@ AC_ARG_ENABLE(win32,
   enable_win32=${enableval}, enable_win32="no")
 AC_MSG_CHECKING([whether to build Windows MinGW binary])
 AC_MSG_RESULT($enable_win32)
-AM_CONDITIONAL(ENABLE_WIN32, test "$enable_win32" = "yes")
 AC_DEFINE_UNQUOTED(CONFIG_ENABLEWIN32, "$enable_win32", [whether to build a Cygwin-independent Windows binary])
 
-# parameter "--enable-64bit"
-AC_ARG_ENABLE(64bit,
-  AS_HELP_STRING([--enable-64bit],[build for a 64 bit architecture such as x86_64 or ppc64 (disabled by default)]),
-  enable_64bit=${enableval}, enable_64bit="no")
-AC_MSG_CHECKING([whether to build for a 64 bit architecture])
-AC_MSG_RESULT($enable_64bit)
-AM_CONDITIONAL(ENABLE_64BIT, test "$enable_64bit" = "yes")
-AC_DEFINE_UNQUOTED(CONFIG_ENABLE64BIT, "$enable_64bit", [whether to build a 64 Bit binary])
+if test "$enable_win32" = "yes"; then
+  configured_CFLAGS=$configured_CFLAGS" -mno-cygwin -U _WIN32"
+  configured_CXXFLAGS=$configured_CXXFLAGS" -mno-cygwin -U _WIN32"
+  configured_LDFLAGS=$configured_LDFLAGS" -mno-cygwin -U _WIN32"
+fi
+
+# export flags
+AC_SUBST(configured_CFLAGS)
+AC_SUBST(configured_CXXFLAGS)
+AC_SUBST(configured_LDFLAGS)
 
 
 #############################################################################
